# SKMImageRegistration

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  config.cmake.in  config.json
include/: AnisotropicTensorUtils.h  CMakeLists.txt  CommonConfig.h  CommonTypes.h  ConfigUtils.h  IOUtils.h  itkAdaptiveStepGradientDescentOptimizer.h  itkAdaptiveStepGradientDescentOptimizer.hxx  itkAdaptiveStepGradientDescentOptimizerv4.h  itkAdaptiveStepGradientDescentOptimizerv4.hxx  itkGlue.h  itkIterationObserver.h  itkRegularizedImageToImageMetric.h  itkRegularizedImageToImageMetric.hxx  itkRegularizedImageToImageMetricv4.h  itkRegularizedImageToImageMetricv4.hxx  itkStandardGradientDescentOptimizer.h  itkStandardGradientDescentOptimizer.hxx  itkStandardGradientDescentOptimizerv4.h  itkStandardGradientDescentOptimizerv4.hxx  itkSummationTransform.h  itkSummationTransform.hxx  itkSymmetricEigenDecompositionImageFilter.h  itkTransformAdapter.h  itkTransformAdapter.hxx  itkUtils.h
include/cuda/: BsplineImage.h  CMakeLists.txt  CudaUtils.h  GpuEvaluator.cu  GpuEvaluator.h  GpuEvaluatorDisplacementField.cu  GpuEvaluatorLCC.cu  GpuEvaluatorMSE.cu  GpuEvaluatorNCC.cu  GpuEvaluatorRegularizers.cu  ImageBase.h  ImageNearest.h  Kernel.h  Mat.h  UniformRng.h  Vec.h
src/: CMakeLists.txt  SKMReg.cxx  SKMRegv4.cxx
superbuild/: CMakeLists.txt  External-BPrinter.cmake  External-ITK.cmake  External-Json.cmake
test/: CMakeLists.txt  itkFiniteDifferenceTest.cpp  itkRegistrationv4Test.cpp
